--- a/domain.yml
+++ b/domain.yml
@@ -162,15 +162,15 @@ responses:
           \nhará lo mismo para la respuesta 3 y de igual manera para todas las respuestas que usted haya escrito, sin dejar ninguna 
           \nsin responder. Recuerde que la pregunta es **¿QUE HAY EN LA MANCHA QUE HACE QUE PAREZCA LO QUE SE VIO?** y no confundir con
           \n¿donde está ubicado lo que anotaron?. Eso se hará mas adelante. Tenga cuidado con esa diferencia.
-          \nSu respuesta:'{respuestaLamina1}'." ##### ACÁ AGREGUE UN SLOT CON LA RTA DEL USUARIO ######
+          \nSu respuesta:'{respuestaLamina1}'." # SLOT CON LA RTA DEL USUARIO
     image: "https://imgur.com/a/Pd6NDCA"
 
   utter_Lamina2Razones:
-  - text: "Aquí Usted ha dicho '{respuestaLamina2}'." ##### ACÁ AGREGUE UN SLOT CON LA RTA DEL USUARIO (PROBAR!!)######
+  - text: "Aquí Usted ha dicho '{respuestaLamina2}'." # SLOT CON LA RTA DEL USUARIO
     image: "https://imgur.com/a/4UoY6KR"
 
   utter_Lamina3Razones:
-  - text: "Aquí Usted ha dicho '{respuestaLamina3}'." ##### ACÁ AGREGUE UN SLOT CON LA RTA DEL USUARIO (PROBAR!!) ######
+  - text: "Aquí Usted ha dicho '{respuestaLamina3}'." # SLOT CON LA RTA DEL USUARIO 
     image: "https://imgur.com/a/1ou8ala"
 
   utter_par:
