--- a/domain.yml
+++ b/domain.yml
@@ -16,7 +16,7 @@ intents:
   - respuestas3
   #- nombre
   - id
-  - entendido
+  - ok
 
 
 entities:
@@ -134,23 +134,26 @@ responses:
     image: "https://i.imgur.com/9uHtd03.jpeg"
 
   utter_TercerParte:
-  - text: "Bien, usted ya tiene escrita sus respuestas y lo qué hay ahí que hacer que se parezca lo que indicó. Ahora, pasaremos a la TERCERA PARTE de la prueba. Para esto se mostrarán unos esquemas donde aparecen las tres manchas. En éstos, usted deberá marcar un círculo en la zona o lugar donde vieron las respuestas que enumeraron, es decir, encerrar donde está toda la respuesta. Por ejemplo, si hubiera escrito que ve dos puntos blancos el dibujo sería el indicado con color rojo, escriba entendido para proseguir"
+  - text: "Bien, usted ya tiene escrita sus respuestas y lo qué hay ahí que hacer que se parezca lo que indicó. Ahora, pasaremos a la TERCERA PARTE de la prueba. Para esto se mostrarán unos esquemas donde aparecen las tres manchas. En éstos, usted deberá marcar un círculo en la zona o lugar donde vieron las respuestas que enumeraron, es decir, encerrar donde está toda la respuesta. Por ejemplo, si hubiera escrito que ve dos puntos blancos el dibujo sería el indicado con color rojo, escriba ok para proseguir"
     image: "https://imgur.com/9qfhslC.jpeg"
 
   utter_TercerParteLamina1:
-  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió.
+  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió. Luego vuelva al chat y escriba ok.
           \nAquí Usted ha dicho '{respuestaLamina1}'"
     image: "https://i.imgur.com/ScvPxc3.jpeg"
   
   utter_TercerParteLamina2:
-  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió
+  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió. Luego vuelva al chat y escriba ok
           \nAquí Usted ha dicho '{respuestaLamina2}'"
     image: "https://i.imgur.com/ZLC8NbE.jpeg"
 
   utter_TercerParteLamina3:
-  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió
+  - text: "Marque un círculo en la zona o lugar donde vió la respuesta que dió. Luego vuelva al chat y escriba ok
           \nAquí Usted ha dicho '{respuestaLamina3}'"
     image: "https://i.imgur.com/9uHtd03.jpeg"
+
+  utter_Fin:
+  - text: "Gracias por realizar el test"
 
   utter_par:
   - text: "hay par"
