--- a/config.yml
+++ b/config.yml
@@ -37,4 +37,4 @@ policies:
      max_history: 5
      epochs: 100
      constrain_similarities: true
-   - name: policies.policy.TestPolicy
+   - name: policies.policy.ZulligerPolicy
