--- a/endpoints.yml
+++ b/endpoints.yml
@@ -11,8 +11,8 @@
 # https://rasa.com/docs/rasa/custom-actions
 
 action_endpoint:
-  #url: "http://localhost:5060/webhook"
   url: "http://localhost:5055/webhook"
+  #url: "http://48ecb1b63e22.ngrok.io/webhook"
   
 
 # Tracker store which is used to store the conversations.
